--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Eunji's Interactive 1 Site</title>
+  <title>eunji's Interactive 1 Site</title>
   <meta charset="utf-8" />
 </head>
 
@@ -13,7 +13,7 @@
   <div id="container">
     
     <!-- about me-->
-    <h1>Eunji Lee</h1>  
+    <h1>eunji lee</h1>  
     <p class="desc">about you...</p>
     
     <!-- my work -->
