--- a/ASCII-TOWN/exterior-eunjilee.html
+++ b/ASCII-TOWN/exterior-eunjilee.html
@@ -5,7 +5,7 @@
             <title>Ascii Town: eunjilee</title>
       </head>
       <body>
-        <a href="interior-eunjilee.html" style="text-decoration: none;">
+        <a href="exterior-eunjilee.html" style="text-decoration: none;">
           <pre>
 EUNJI'S HOUSE
   \                   OOO
