--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
   <title>eunji's Interactive 1 Site</title>
   <meta charset="utf-8" />
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 
 <body>
@@ -32,7 +32,13 @@
 
       <ul>
         <li><a href="ASCII-TOWN/exterior-eunjilee.html">Exterior ASCII Town</a></li>
-        <li><a href="ASCII-TOWN/interior-eunjilee.html">Interior ASCII Town</a></li>        
+        <li><a href="ASCII-TOWN/interior-eunjilee.html">Interior ASCII Town</a></li>     
+        <li>
+          <a href="interview/exercise-interview-html.html">
+            HTML Interview
+          </a>
+        </li>
+        
         <li><a href="#">EX 2</a></li>
       </ul>
     
