--- a/ASCII-TOWN/interior-eunjilee.html
+++ b/ASCII-TOWN/interior-eunjilee.html
@@ -5,7 +5,7 @@
             <title>Ascii Town: eunjilee</title>
       </head>
       <body>
-        <a href="exterior-eunjilee.html" style="text-decoration: none;">
+        <a href="interior-eunjilee.html" style="text-decoration: none;">
 
           <pre>
                      ___ ++++++++++++++++++
