--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
       <ul>
         <li><a href="ASCII-TOWN/exterior-eunjilee.html">Exterior ASCII Town</a></li>
-        <li><a href="ASCII-TOWN/interior-eunjilee.html">Interior ASCII Town</a></li>     
-        <li>
+        <li><a href="ASCII-TOWN/interior-eunjilee.html">Interior ASCII Town</a></li>  <li>
           <a href="interview/exercise-interview-html.html">
             HTML Interview
           </a>
         </li>
+        <li><a href="interview/exercise-interview-css1.html">css1</a></li>
         
         <li><a href="#">EX 2</a></li>
       </ul>
