--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
             HTML Interview
           </a>
         </li>
-        <li><a href="interview/exercise-interview-css1.html">css1</a></li>
+        <li>
+          <a href="interview/exercise-interview-css1.html">HTML Interview CSS1
+          </a>
+        </li>
         
         <li><a href="#">EX 2</a></li>
       </ul>
