--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li><a href="interview/exercise-interview-html.html">HTML Interview</a></li>
         <li><a href="interview/exercise-interview-css1.html">HTML Interview CSS1</a></li>
         <li><a href="interview/exercise-interview-css2.html">HTML Interview CSS2</a></li>
-        <li><a href="mickey/index.html"></a></li>
+        <li><a href="mickey/index.html">Mickey</a></li>
       </ul>
     
     </div>
