--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <li><a href="interview/exercise-interview-css1.html">HTML Interview CSS1</a></li>
         <li><a href="interview/exercise-interview-css2.html">HTML Interview CSS2</a></li>
         <li><a href="mickey/index.html">Mickey</a></li>
+        <li><a href="flags/custom-flag.html"></a></li>
       </ul>
     
     </div>
