--- a/interview/exercise-interview-css2.html
+++ b/interview/exercise-interview-css2.html
@@ -9,6 +9,7 @@
   
   <body>  
     <div id="container">
+        <hr width="100%" color="#c00000"/>
     <h2 id="prelude">
     	    Prelude
     </h2>
@@ -29,11 +30,11 @@
         <p>I think we can loose humanity and become less connected to the world in front of us and to the people around of us.</p>
 
     <h2 id="reference">Some Things</h2>
-        <p>Jeiko recently read an interesting interview with Rafaël Rozendaal about the screen saver.“Rafaël Rozendaal: At art school I discovered the internet, which can be both a medium and a podium. I could do my own thing there, exploring the possibilities of the computer, finding out what you can do with the computer that you cannot do with other media. Technically speaking, you can create generative images, which are programmed to change constantly. You create a moving digital image by compiling a list of instructions that the computer follows. Put very simply: you create a sort of fountain that gushes water all the time, but never repeats itself exactly. The drops of water fall slightly differently every time. That is how I think of generative images, and that is also the link with screensavers.”</p>
+        <p>Jeiko recently read an interesting interview with Rafaël Rozendaal about the screen saver.“Rafaël Rozendaal: At art school I discovered the internet, which can be both a medium and a podium. I could do my own thing there, exploring the possibilities of the computer, finding out what you can do with the computer that you cannot do with other media. Technically speaking, you can create generative images, which are programmed to change constantly. You create a moving digital image by compiling a list of instructions that the computer follows. Put very simply: you create a sort of fountain that gushes water all the time, but never repeats itself exactly. The drops of water fall slightly differently every time. That is how I think of generative images, and that is also the link with screensavers.”</p><br>
         <a href="https://sleepmode.hetnieuweinstituut.nl/en/interview/">Sleep Mode The Art of the Screensaver</a>
 
         <div>
-        	<h2>Table of Content</h2>
+        	<h2 id="toc">Table of Content</h2>
         	<ul>
         		<li><a href="#prelude">Prelude</a></li>
         		<li><a href="#conversation">Coversation</a></li>
