--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <title>eunji's Interactive 1 Site</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" type="text/css" href="css/main.css">
+  <style>
+    body {
+      background-image: url("images/grid.png");
+      background-color: ivory;
+    }
+  </style>
 </head>
 
 <body>
@@ -14,7 +20,7 @@
     
     <!-- about me-->
     <h1>eunji lee</h1>  
-    <p class="desc">about you...</p>
+    <p class="desc"></p>
     
     <!-- my work -->
     <div id="exercises">
