--- a/flags/national-flag.html
+++ b/flags/national-flag.html
@@ -7,7 +7,28 @@
 </head>
 <body>
         <div id="canvas">
-          <div id="circle"></div>
+          <div id="halfc-1"></div>
+          <div id="halfc-2"></div>
+          <div id="halfc-3"></div>
+          <div id="halfc-4"></div>
+          <div id="stroke-1" class="rotate-1"></div>
+          <div id="stroke-2" class="rotate-1"></div>
+          <div id="stroke-3" class="rotate-1"></div>
+          <div id="stroke-4" class="rotate-2"></div>
+          <div id="stroke-5" class="rotate-2"></div>
+          <div id="stroke-6" class="rotate-2"></div>
+          <div id="stroke-7" class="rotate-2"></div>
+          <div id="stroke-8" class="rotate-1"></div>
+          <div id="stroke-9" class="rotate-1"></div>
+          <div id="stroke-10" class="rotate-1"></div>
+          <div id="stroke-11" class="rotate-1"></div>
+          <div id="stroke-12" class="rotate-1"></div>
+          <div id="stroke-13" class="rotate-1"></div>
+          <div id="stroke-14" class="rotate-2"></div>
+          <div id="stroke-15" class="rotate-2"></div>
+          <div id="stroke-16" class="rotate-2"></div>
+          <div id="stroke-17" class="rotate-2"></div>
+          <div id="stroke-18" class="rotate-2"></div>
         </div>
 </body>
 </html>
