--- a/interview/exercise-interview-css1.html
+++ b/interview/exercise-interview-css1.html
@@ -16,7 +16,7 @@
         <h1> Jeiko </h1>
         <img src="Jeiko.jpg" width="300" height="300">
           <p>
-        	   <b> Jeiko </b> is from South Florida.<br>He studying graphic design at California College of the Arts (CCA).<br>He was transferred from Lassen College.<br>He sees himself in the next five years as a freelancer, traveling without financial worries.
+        	   Jeiko is from South Florida.<br>He studying graphic design at California College of the Arts (CCA).<br>He was transferred from Lassen College.<br>He sees himself in the next five years as a freelancer, traveling without financial worries.
           </p>
 
         <h2 id="conversation">Conversation</h2>
