--- a/interview/exercise-interview-css2.html
+++ b/interview/exercise-interview-css2.html
@@ -9,7 +9,7 @@
   
   <body>  
     <div id="container">
-        <hr width="100%" color="#c00000"/>
+      <hr id="red-line"/>
     <h2 id="prelude">
     	    Prelude
     </h2>
