--- a/multiples/index.html
+++ b/multiples/index.html
@@ -23,7 +23,7 @@
     </div>
     <!-- show on print -->
     <div id="print">
-        This is for print.
+        <img src="background.jpg">
     </div>
 </body>
 </html>
