--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <li><a href="mickey/index.html">Mickey</a></li>
         <li><a href="flags/national-flag.html">National Flag</a></li>
         <li><a href="flags/custom-flag.html">Custom Flag</a></li>
+        <li><a href="question-answer/index.html">Q+A breakpoint</a></li>
         <li><a href="multiples/index.html">Multiples</a></li>
       </ul>
     
@@ -58,6 +59,8 @@
       </ul>
 
     </div>
-  </div>
+  </div> 
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
