--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <li><a href="flags/custom-flag.html">Custom Flag</a></li>
         <li><a href="question-answer/index.html">Q+A breakpoint</a></li>
         <li><a href="multiples/index.html">Multiples</a></li>
+        <li><a href="sensory-experience/index.html">Sensory Experience</a></li>
       </ul>
     
     </div>
