--- a/sensory-experience/index.html
+++ b/sensory-experience/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
-	<img id="image1" src="images/background.gif">
+	<img id="image1" src="images/foot4.svg">
 	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <div class="thunderHover" id="thunder1"></div>
