--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     
       <ul>
         <li><a href="P1/index.html">P1</a></li>
-        <li><a href="#">P2</a></li>
+        <li><a href="P2/index.html">P2</a></li>
       </ul>
 
     </div>
